--- a/Control_Flow.ipynb
+++ b/Control_Flow.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.date(2017, 2, 22)"
+       "datetime.date(2017, 5, 14)"
       ]
      },
      "execution_count": 2,
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.0.0'"
+       "'0.8.0rc0'"
       ]
      },
      "execution_count": 4,
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.12.0'"
+       "'1.12.1'"
       ]
      },
      "execution_count": 5,
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -146,12 +146,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.75876\n",
-      "0.9915587370245782\n"
+      "Tensor(\"cond_5/Merge:0\", shape=(), dtype=float32)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.random_uniform([])\n",
+    "y = tf.random_uniform([])\n",
+    "out = tf.cond(x < y, lambda: x + y,  lambda: x - y)\n",
+    "print(out)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -171,12 +175,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n"
+      "Tensor(\"case_9/If_1/Merge:0\", shape=(), dtype=int32)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.random_uniform([], 0, 5, tf.int32)\n",
+    "y = tf.random_uniform([], 0, 5, tf.int32)\n",
+    "out = tf.case({x < y: lambda: x + y, x > y: lambda: x - y}, default=lambda: tf.constant(0), exclusive=True)\n",
+    "print(out)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -360,21 +368,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
