--- a/Control_Flow.ipynb
+++ b/Control_Flow.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.date(2017, 5, 14)"
+       "datetime.date(2017, 5, 15)"
       ]
      },
      "execution_count": 2,
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"cond_5/Merge:0\", shape=(), dtype=float32)\n"
+      "1.02696\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "x = tf.random_uniform([])\n",
     "y = tf.random_uniform([])\n",
     "out = tf.cond(x < y, lambda: x + y,  lambda: x - y)\n",
-    "print(out)"
+    "print(out.eval())"
    ]
   },
   {
@@ -162,35 +162,6 @@
    "metadata": {},
    "source": [
     "Q2. Let x and y be 0-D int32 tensors randomly selected from 0 to 5. Return x + y 2 if x < y, x - y elif x > y, 0 otherwise."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"case_9/If_1/Merge:0\", shape=(), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = tf.random_uniform([], 0, 5, tf.int32)\n",
-    "y = tf.random_uniform([], 0, 5, tf.int32)\n",
-    "out = tf.case({x < y: lambda: x + y, x > y: lambda: x - y}, default=lambda: tf.constant(0), exclusive=True)\n",
-    "print(out)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Q3. Let X be a tensor [[-1, -2, -3], [0, 1, 2]] and Y be a tensor of zeros with the same shape as X. Return a boolean tensor that yields True if X equals Y elementwise."
    ]
   },
   {
@@ -204,12 +175,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Tensor(\"case/If_1/Merge:0\", shape=(), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.random_uniform([], 0, 5, tf.int32)\n",
+    "y = tf.random_uniform([], 0, 5, tf.int32)\n",
+    "out = tf.case({x < y: lambda: x + y, x > y: lambda: x - y}, default = lambda: tf.constant(0), exclusive = True)\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3. Let X be a tensor [[-1, -2, -3], [0, 1, 2]] and Y be a tensor of zeros with the same shape as X. Return a boolean tensor that yields True if X equals Y elementwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[[False False False]\n",
       " [ True False False]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "X = tf.constant([[-1, -2, -3], [0, 1, 2]])\n",
+    "Y = tf.zeros_like(X)\n",
+    "out = tf.equal(X, Y)\n",
+    "print(out.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +247,11 @@
    ],
    "source": [
     "x = tf.constant([True, False, False], tf.bool)\n",
-    "y = tf.constant([True, True, False], tf.bool)\n"
+    "y = tf.constant([True, True, False], tf.bool)\n",
+    "out1 = tf.logical_and(x, y)\n",
+    "out2 = tf.logical_or(x, y)\n",
+    "out3 = tf.logical_xor(x, y)\n",
+    "print(out1.eval(), out2.eval(), out3.eval())"
    ]
   },
   {
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +277,9 @@
     }
    ],
    "source": [
-    "x = tf.constant([True, False, False], tf.bool)\n"
+    "x = tf.constant([True, False, False], tf.bool)\n",
+    "out = tf.logical_not(x)\n",
+    "print(out.eval())"
    ]
   },
   {
@@ -287,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +312,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "X = tf.constant([[-1, -2, -3], [0, 1, 2]])\n",
+    "Y = tf.zeros_like(X)\n",
+    "out = tf.not_equal(X, Y)\n",
+    "print(out.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -312,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +342,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "X = tf.constant([[-1, -2, -3], [0, 1, 2]])\n",
+    "Y = tf.zeros_like(X)\n",
+    "out = tf.greater_equal(X, Y)\n",
+    "print(out.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,22 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 6]\n",
-      " [7 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n"
+    "X = tf.constant([[1, 2], [3, 4]])\n",
+    "Y = tf.constant([[5, 6], [7, 8]])\n",
+    "Z = tf.constant([[True, False], [False, True]])\n",
+    "#out = tf.where(Z, X, Y)\n",
+    "#print(out.eval())\n",
+    "tf.where?"
    ]
   },
   {
